--- a/package.json
+++ b/package.json
@@ -1,7 +1,6 @@
 {
   "name": "ec_original_01",
   "version": "1.0.0",
-  "description": "",
   "main": "index.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1"
@@ -15,5 +14,15 @@
     "gulp-rename": "^1.2.2",
     "gulp-sass": "^3.1.0",
     "gulp-uglify": "^3.0.0"
-  }
+  },
+  "dependencies": {},
+  "repository": {
+    "type": "git",
+    "url": "git+https://github.com/ktygch/ec_original_01.git"
+  },
+  "bugs": {
+    "url": "https://github.com/ktygch/ec_original_01/issues"
+  },
+  "homepage": "https://github.com/ktygch/ec_original_01#readme",
+  "description": ""
 }
